sth